[package]
name = "policy-fetcher"
version = "0.4.3"
authors = [
  "Flavio Castelli <fcastelli@suse.com>",
  "Rafael Fernández López <rfernandezlopez@suse.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.9.0"
async-stream = "0.3.0"
async-trait = "0.1.50"
base64 = "0.13.0"
directories = "4.0.1"
lazy_static = "1.4.0"
oci-distribution = { git = "https://github.com/krustlet/oci-distribution", rev = "0f717968093a5415f428503d741dedf24ea97948", default-features = false, features =  ["rustls-tls"] }
path-slash = "0.1.4"
regex = "1.5.4"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls"] }
rustls = "0.20.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.15"
sha2 = "0.10.1"
sigstore = { git = "https://github.com/sigstore/sigstore-rs", default-features = false, features = ["rustls-tls"], rev = "6e4f0c3ff2d31730dee18687e00f9743fe1ee414" }
tracing = "0.1.29"
url = { version = "2.2.0", features = ["serde"] }
walkdir = "2"
wasmtime = "0.33.0"

[dev-dependencies]
rstest = "0.12.0"
tempfile = "3.2.0"
textwrap = "0.14.2"
